fix(sticky-panel): contain panel size to max horizontal space on smaller viewports

--- a/src/components/structure/interacting/search/search.scss
+++ b/src/components/structure/interacting/search/search.scss
@@ -153,6 +153,7 @@
       position: static;
       bottom: inherit;
       right: inherit;
+      width: 100%;
 
       padding: $m 0 $s 0;
     }
